hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__native_struct_must_not_have_body.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Native struct S must not have a body",
                span: 3:32; [76, 106],
                level: Error,
            },
        ],
        inputs: (),
    },
)
